# spatial.properties

./: .gitignore  CLAUDE.md  EOD_2025-11-19.md  README.md  demo.spatial.properties - design.md  next.config.js  package-lock.json
.specify/memory/: constitution.md
Docs/: Demo scenario.md  EOD_2025-12-30.md  EOD_2026-01-01.md  EOD_2026-01-03.md  Pack Explorer.md  README.md
Docs/Archive/: 00-Overview-and-Brand.md  01-Architecture-and-Data-Model.md  02-Services-and-APIs.md  03-Operations-and-Testing.md  04-Implementation-Plan.md  05-Infrastructure-Setup-Guide.md  06-Cost-Modeling-and-Budget.md  07-Network-and-Security-Architecture.md  08-IAM-Roles-and-Permissions.md  README.md
Docs/Updates/: SpatialWebAlignment.md  bushfire-vegetation-clearance-toolset.md  wa-bushfire-vegetation-clearance-context-pack.md  wa-solar-feasibility-pack-manifest-outline.md  wa-solar-pack-licensing-matrix.md
Docs/architecture/: 01-Architecture-and-Data-Model.md  02-Services-and-APIs.md  (+5 more)
Supporting Docs/: SLO_and_Budgets.yaml  Spatial.Properties - Latency.Reliability.Cost Trade-off Playbook.md
adr/: 0001-pack-first-architecture.md
cli/: README.md  pyproject.toml
cli/spatialpack/: __init__.py  __main__.py
cli/spatialpack/commands/: __init__.py  validate.py
cli/spatialpack/validators/: __init__.py  manifest.py
cng-stack/: README.md
demo/: CLAUDE.md
demo-offline-gis/: package.json  run.sh
mockup/: README.md
schemas/: layer.schema.json  spatialpack.schema.json
spec/: constitution.md
website/: .gitignore  CLAUDE.md  README.md  package.json  tailwind.config.ts
(+88 files in other folders)
